# sally-copy-paste

./: LICENSE  README.md  package-lock.json  package.json  vite.config.ts  배포-설치안내.md
docs/superpowers/plans/: 2026-06-17-clipboard-manager-mvp.md
docs/superpowers/specs/: 2026-06-17-clipboard-manager-design.md
scripts/: release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: clipboard.ts  paste.ts  storage.ts
src/core/: history.test.ts  history.ts  smoke.test.ts  types.ts
