[package]
name = "sally-copy-paste"
version = "0.1.0"
description = "A Tauri App"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sally_copy_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSRunningApplication",
    "NSWorkspace",
    "libc",
    "NSPasteboard",
    "NSPasteboardItem",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSSet",
    "NSString",
    "NSURL",
    "NSFileWrapper",
    "NSError",
] }
macos-accessibility-client = "0.0.1"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
